2003-01-20  Tim Legant  <tim@catseye.net>

	* tmda-vdomains.ht: New file.

2002-11-04  Jason R. Mastaler  <jasonrm@hrothgar.la.mastaler.com>

	* inuse.ht (Links): Add Open Vistas Networking, Inc.

2002-10-31  Jason R. Mastaler  <jasonrm@hrothgar.la.mastaler.com>

	* inuse.ht (Links): Add the FSF.

2002-10-24  Jason R. Mastaler  <jasonrm@hrothgar.la.mastaler.com>

	* howto-template.ht: New file.

2002-10-03  Jason R. Mastaler  <jasonrm@hrothgar.la.mastaler.com>

	* inuse.ht (Links): Add Stand Blue Technology.

2002-10-01  Jason R. Mastaler  <jasonrm@hrothgar.la.mastaler.com>

	* config-vars.{ht,html,tpl}: New files.

	* Makefile: Add config-vars target.

2002-09-25  Jason R. Mastaler  <jasonrm@hrothgar.la.mastaler.com>

	* press.ht (Links): Add Daily Aardvark story.

2002-09-12  Tim Legant  <tim@catseye.net>

	* config-filter.ht: Added 'hold' action to list of incoming
	actions.

2002-09-12  Jason R. Mastaler  <jasonrm@hrothgar.la.mastaler.com>

	* requirements.ht (Links): Update Python minimum requirement to
	version 2.1.

2002-09-01  Jason R. Mastaler  <jasonrm@hrothgar.la.mastaler.com>

	* tmda-ofmipd.ht: Document `-R' option.

2002-08-27  Jason R. Mastaler  <jasonrm@hrothgar.la.mastaler.com>

	* inuse.ht (Links): Add Stanford Computer Graphics Laboratory and
	CentralPets.
	
2002-08-26  Tim Legant  <tim@catseye.net>

	* config-filter.ht (username): Fixed example under Variable
	Interpolation.  It had used 'from' instead of 'from-file'.

2002-08-21  Jason R. Mastaler  <jasonrm@hrothgar.la.mastaler.com>

	* features.ht (Links): Add smart auto-responding.

2002-08-19  Jason R. Mastaler  <jasonrm@hrothgar.la.mastaler.com>

	* config-links.h: Add sidebar link to TMDA Filter Sources.
	
2002-08-18  Tim Legant  <tim@catseye.net>

	* config-filter.ht: Significantly shortened file.  Added
	documentation for macros, included filters and variable
	interpolation.  Moved source- and match-specific documentation to
	new file, filter-sources.ht.

	* filter-sources.ht: New file.
