@@ -1,6 +1,6 @@
 <HTML>
 <!-- THIS PAGE IS AUTOMATICALLY GENERATED.  DO NOT EDIT. -->
-<!-- Thu Jan 23 17:43:22 2003 -->
+<!-- Wed Feb  5 19:09:22 2003 -->
 <!-- USING HT2HTML 1.2 -->
 <!-- SEE http://barry.wooz.org/software/ht2html -->
 <!-- User-specified headers:
@@ -494,6 +494,16 @@ sendmail: /path/to/tmda/bin/tmda-sendmail
 <li>In the <em>Sendmail Path</em> box, enter <em>/path/to/tmda/bin/tmda-sendmail</em>
 </ul>
 <br>
+
+<li>For <a href="http://www.inter7.com/sqwebmail.html" TARGET="Resource Window">SqWebMail</a>,<br>
+<ul>
+<li>Replace <em>/usr/local/share/sqwebmail/sendit.sh</em> with 
+<em>contrib/sendit.sh</em> from the TMDA distribution. 
+<li> sendit.sh automatically works with  SqWebMail + vpopmail + TMDA, or just
+SqWebMail + vpopmail.
+</ul>
+<br>
+
 
 <li>For <a href="http://kmail.kde.org/" TARGET="Resource Window">KMail (KDE Mail)</a>,
  Settings --> Configure KMail --> Network --> Sending Mail<br>
