@@ -1,3 +1,7 @@
+2003-02-05  Jason R. Mastaler  <jasonrm@hrothgar.la.mastaler.com>
+
+	* config-client.ht: Added SqWebMail blurb.
+
 2003-01-20  Tim Legant  <tim@catseye.net>
 
 	* tmda-vdomains.ht: New file.
